ch12/nginx-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "nginx-deployment"
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: "nginx"
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: "nginx"
        ports:
        - containerPort: 80
