ch12/hello-world-service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: hello-world-app
  name: hello-world
  annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "alb"
spec: 
  ports: 
    - 
      name: http
      port: 80
  selector: 
    app: hello-world-app
  type: NodePort
