ch12/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx-service"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    name: "nginx"
